--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-    <style>
-      .hello-msg{
-        font-size: 18px;
-        color: #fff;
-        margin-right: 20px;
-      }
-    </style>
     <head>
         <title>Estore</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -58,21 +51,26 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'store' %}">Store<span class="sr-only">(current)</span></a>
-              </li>
-
-            </ul>
-            <div class="form-inline my-2 my-lg-0">
-                <a id="login-btn" href="{% url 'login' %}" class="btn btn-warning">Login</a>
-                <span id="hello-msg" class="hello-msg">Hello, {{request.user}}</span>
-                <span id="logout-span" ><a class="hello-msg" href="{% url 'logout' %}"> Logout</a> </span>
-                <a href="{% url 'cart' %}">
-                    <img  id="cart-icon" src="{% static 'images/cart.png' %}">
-                </a>
-                <p id="cart-total">{{cart_items}}</p>
-            </div>
+              <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                      <a class="nav-link" href="{% url 'store' %}">Store<span class="sr-only">(current)</span></a>
+                  </li>
+                  <li>
+                      <form id="search-form" class="form-inline" action="{% url 'search' %}">
+                          <input name="search" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                          <button class="btn btn-sm btn-outline-light" type="submit">Search</button>
+                      </form>
+                  </li>
+              </ul>
+              <div class="form-inline my-2 my-lg-0">
+                  <a id="login-btn" href="{% url 'login' %}" class="btn btn-outline-success my-2 my-sm-0">Login</a>
+                  <span id="hello-msg" class="hello-msg">Hello, {{request.user}}</span>
+                  <span id="logout-span" ><a class="hello-msg" style="color:red" href="{% url 'logout' %}"> Logout</a> </span>
+                  <a href="{% url 'cart' %}">
+                      <img  id="cart-icon" src="{% static 'images/cart.png' %}">
+                  </a>
+                  <p id="cart-total">{{cart_items}}</p>
+              </div>
           </div>
         </nav>
         <div class="container">
